Regression: Segfault when CTRL key hit #101004

Closed
opened 2022-09-12 14:13:35 +02:00 by Jaggz H · 9 comments

Build from yesterday. Linux, Debian Stable.
1f4dc51d09

Caused by ac20970bc2

BLI_assert failed: source/blender/blenkernel/intern/object.cc:4448, BKE_object_get_editmesh_eval_cage(), at 'mesh->edit_mesh != nullptr'

In this blend, I have the measure tool active.

Reproduce:

  1. Load attached .blend
  2. x Delete active cube
  3. In outliner: Eyeball visibility enable Cube.001 (do not select the object)
  4. Mouse over 3d view and hit CTRL
    foo.blend
Build from yesterday. Linux, Debian Stable. 1f4dc51d09af Caused by ac20970bc2 BLI_assert failed: source/blender/blenkernel/intern/object.cc:4448, BKE_object_get_editmesh_eval_cage(), at 'mesh->edit_mesh != nullptr' In this blend, I have the measure tool active. Reproduce: 1. Load attached .blend 2. x Delete active cube 3. In outliner: Eyeball visibility enable Cube.001 (do not select the object) 4. Mouse over 3d view and hit CTRL [foo.blend](https://archive.blender.org/developer/F13483735/foo.blend)
Author

Added subscriber: @jaggz

Added subscriber: @jaggz
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht
Member

Caused by ac20970bc2

CC @Sergey
CC @brecht

Caused by ac20970bc2 CC @Sergey CC @brecht
Philipp Oeser changed title from Segfault when CTRL key hit to Regression: Segfault when CTRL key hit 2022-09-12 14:55:04 +02:00
Sergey Sharybin self-assigned this 2022-09-12 15:10:40 +02:00

This issue was referenced by bb3a021427

This issue was referenced by bb3a021427f2132f1db62a76eeca2ca4be1601da

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.4 milestone 2023-02-07 19:01:34 +01:00
Bastien Montagne added this to the Core project 2023-02-09 15:43:11 +01:00
Bastien Montagne removed this from the Core project 2023-02-09 18:20:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101004
No description provided.