source/blender/depsgraph/intern/eval/deg_eval_flush.cc
@@ -31,6 +31,7 @@
 #include "intern/debug/deg_debug.h"
 #include "intern/depsgraph.h"
 #include "intern/depsgraph_relation.h"
+#include "intern/depsgraph_tag.h"
 #include "intern/depsgraph_type.h"
 #include "intern/depsgraph_update.h"
 #include "intern/node/deg_node.h"
@@ -99,6 +100,18 @@ inline void flush_prepare(Depsgraph *graph)
 
 inline void flush_schedule_entrypoints(Depsgraph *graph, FlushQueue *queue)
 {
+  /* Something changed in the scene, so re-tag IDs with flags which were previously ignored due to
+   * ID being hidden. This will ensure the ID is properly evaluated when it becomes visible. */
+  for (IDNode *node : graph->id_nodes) {
+    if (node->id_invisible_recalc) {
+      graph_id_tag_update(graph->bmain,
+                          graph,
+                          node->id_orig,
+                          node->id_invisible_recalc,
+                          DEG_UPDATE_SOURCE_VISIBILITY);
+    }
+  }
+
   for (OperationNode *op_node : graph->entry_tags) {
     queue->push_back(op_node);
     op_node->scheduled = true;
